--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,7 @@ body {
   font-weight: 700;
   font-size: 60px;
   line-height: 1.3;
+  margin: 0;
 }
 
 .subtitle-text {
@@ -57,6 +58,7 @@ body {
     line-height: 1.2;
     text-transform: uppercase;
     color: #000000;
+    margin: 0;
 }
 
 .button {
@@ -74,28 +76,52 @@ body {
   width: fit-content;
 }
 
+.content-wrapper {
+  width: 651px;
+  margin: 0;
+  margin-inline: auto;
+  text-align: center;
+}
+
+.content-item-wrapper {
+  width: 230px;
+  margin: 0;
+  margin-inline: auto;
+  text-align: center;
+}
+
 /*Хедер*/
 
 .header {
   color: #000000;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-inline: 70px;
 }
 
 .header-logo-link {
   display: block;
   width: 140px;
-  height: 70px;
   z-index: 1;
   overflow: hidden;
+  flex-shrink: 0;
+  margin-right: 30px;
+  margin-bottom: -6px;
 }
 
 .header-nav {
   display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
 }
 
 .main-nav-list {
   list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: auto;
+  gap: 32px;
 }
 
 .item-link {
@@ -112,20 +138,25 @@ body {
   text-transform: uppercase;
 }
 
-.user-nav-link {
-  display: block;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: inherit;
-}
-
 .user-nav-list {
   list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-right: 20px;
 }
 
 .user-nav-list .user-nav-item {
   min-width: 20px;
   min-height: 20px;
+}
+
+.user-nav-link {
+  display: block;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .user-nav-search::before,
@@ -156,6 +187,8 @@ body {
   background-repeat: no-repeat;
   background-position: center bottom, center;
   background-size: 100% auto, cover;
+  padding-top: 51px;
+  padding-bottom: 82px;
 }
 
 .hero-image {
@@ -165,10 +198,20 @@ body {
 
 /*Блок с преимуществами отдыха в Седоне*/
 
+.benefits-intro-container {
+  padding-block: 69px;
+}
+
+.benefits-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .benefits-item {
   font-weight: 400;
   font-size: 18px;
-  list-style-type: none;
+  width: 33.33%;
 }
 
 .benefits-item h3 {
@@ -196,10 +239,16 @@ body {
 
 /*Блок с сервисом*/
 
+.service-intro-container {
+  padding-block: 64px;
+}
+
 .service-list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
 .service-list h3::before {
@@ -208,6 +257,10 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.service-item {
+  width: 33.33%;
 }
 
 .service-item h3 {
@@ -221,6 +274,7 @@ body {
 .service-item p {
   font-size: 18px;
   line-height: 1.17;
+  text-wrap: balance;
 }
 
 .service-item:nth-child(odd) {
@@ -231,31 +285,45 @@ body {
   background-image: url("../images/icons/service-house.svg");
   width: 74px;
   height: 70px;
+  margin-inline: auto;
 }
 
 .service-item:nth-child(2) h3::before {
   background-image: url("../images/icons/service-food.svg");
   width: 64px;
   height: 76px;
+  margin-inline: auto;
 }
 
 .service-item:nth-child(3) h3::before {
   background-image: url("../images/icons/service-gift.svg");
   width: 75px;
   height: 72px;
+  margin-inline: auto;
 }
 
 /*Блок с поиском гостиницы*/
 
+.search {
+  padding-block: 96px;
+}
+
 .search-link {
   font-size: 20px;
   line-height: 1.8;
+  margin-inline: auto;
+}
+
+.search p {
+  text-wrap: balance;
 }
 
 /*Блок с подпиской на рассылку*/
 
 .subscribe {
   color: #000000;
+  padding-top: 96px;
+  padding-bottom: 104px;
 }
 
 .subscribe-special {
@@ -272,6 +340,12 @@ body {
 
 .subscribe-special p {
   color: #ffffff;
+}
+
+.subscribe-form {
+  margin-inline: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .subscribe-form label {
@@ -302,35 +376,50 @@ body {
 
 .footer {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 28px;
+  padding: 40px 70px 30px;
+  justify-content: space-between;
 }
 
 .social-item {
-  list-style-type: none;
+  flex-shrink: 0;
+}
+
+.social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .social-link {
   display: block;
-  width: 25px;
-  height: 15px;
+  width: 47px;
+  height: 40px;
+  color: #83b3d3;
 }
 
 .social-vk {
   background-image: url("../images/icons/socials/vk.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 25px 15px;
+  background-position: center;
 }
 
 .social-telegram {
   background-image: url("../images/icons/socials/telegram.svg");
   background-repeat: no-repeat;
-  background-position: 0%;
+  background-size: 18px 16px;
+  background-position: center;
 }
 .social-youtube {
   background-image: url("../images/icons/socials/youtube.svg");
   background-repeat: no-repeat;
-  background-position: 0%;
+  background-size: 23px 18px;
+  background-position: center;
 }
 
 .phone-link {
@@ -363,12 +452,15 @@ body {
   background-size: cover;
   background-color: #82B3D3;
   color: #ffffff;
+  padding: 35px 70px 70px 70px;
 }
 
 /*Хлебные крошки*/
 
 .breadcrumps-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .breadcrumps-link {
@@ -412,6 +504,8 @@ body {
 
 .filters-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .filters-title {
@@ -456,6 +550,15 @@ body {
   font-family: inherit;
 }
 
+/*Блок общий для сортировки и отображения карточек*/
+
+.sorting-common {
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 40px;
+}
+
 /*Сортировка*/
 
 .sorting {
@@ -468,14 +571,46 @@ body {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   font-family: inherit;
+  margin-right: 70px;
 }
 
 /*добавить блочки с отображением результатов поиска: плиткой, списком, карта целиком*/
 
+.searched-cards {
+  margin-right: auto;
+}
+
+.cards-view-buttons-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.cards-view-buttons-group a {
+  display: block;
+  width: 48px;
+  height: 48px;
+  border: 2px solid #e5e5e5;;
+  border-radius: 4px;
+}
+
 /*Блок с результатами поиска*/
+
+.search-results {
+  padding-inline: 70px;
+}
 
 .cards-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.cards-item {
+  width: 33.33%;
 }
 
 .item-title-link {
@@ -532,10 +667,12 @@ body {
 
 .pagination-list {
   list-style: none;
+  display: flex;
+  gap: 8px;
 }
 
 .pagination-link {
-  display: block;
+  display: flex;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.8;
@@ -545,6 +682,9 @@ body {
   width: 60px;
   height: 60px;
   border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .pagination-current-link {
